--- a/references.bib
+++ b/references.bib
@@ -39,7 +39,7 @@
     author = {Andy South},
     year = {2017},
     note = {R package version 0.1.0},
-    url = {https://CRAN.R-project.org/package=rnaturalearth},
+    url = {https://CRAN.R-project.org/package=rnaturalearth}
   }
   
   
@@ -50,7 +50,7 @@
     year = {2006},
     volume = {17},
     number = {1},
-    pages = {1--27},
+    pages = {1--27}
   }
   
 
@@ -109,7 +109,6 @@
   year={2018}
 }
 
-<<<<<<< HEAD
 @Article{sf,
     author = {Edzer Pebesma},
     title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},
@@ -185,12 +184,12 @@
   }
 
 @Manual{maps,
-    title = {maps: Draw Geographical Maps},
-    author = {Original S code by Richard A. Becker and Allan R. Wilks. R version by Ray Brownrigg. Enhancements by Thomas P Minka and Alex Deckmyn.},
-    year = {2018},
-    note = {R package version 3.3.0},
-    url = {https://CRAN.R-project.org/package=maps}
-  }
+  title = {maps: Draw Geographical Maps},
+  author = {Original S code by Richard A. Becker and Allan R. Wilks. R version by Ray Brownrigg. Enhancements by Thomas P Minka and Alex Deckmyn.},
+  year = {2018},
+  note = {R package version 3.3.0},
+  url = {https://CRAN.R-project.org/package=maps},
+}
   
 @Manual{wbstats,
     title = {wbstats: Programmatic Access to the World Bank API},
