--- a/Happiness.Rmd
+++ b/Happiness.Rmd
@@ -7,18 +7,24 @@ author:
   email: wlii0039@student.monash.edu
   correspondingauthor: true
   qualifications: 28723740
-- familyname: Luo
-  othernames: Jinhao
-  address: Monash University
-  email: jluo0015@student.monash.edu
-  correspondingauthor: true
-  qualifications: 29012449
 - familyname: He
   othernames: Xitong
   address: Monash University
   email: xhee0013@student.monash.edu
   correspondingauthor: true
   qualifications: 29026342
+- familyname: Luo
+  othernames: Jinhao
+  address: Monash University
+  email: jluo0015@student.monash.edu
+  correspondingauthor: true
+  qualifications: 29012449
+- familyname: Ang
+  othernames: Brendi
+  address: Monash University
+  email: ang0004@student.monash.edu
+  correspondingauthor: true
+  qualifications: 31429254
 department: Department of\newline Econometrics &\newline Business Statistics
 organization: ETC5513 Assignment 4
 bibliography: references.bib
@@ -68,7 +74,11 @@ select = dplyr::select
 
 @helliwell2019world has indicated that there is an inner connection between government and happiness, it means the jobs of government would influence the happiness of citizens, while the people feeling of happiness could guide them to decide which kind of government to support. In addition, @helliwell2019world has also explained that the living quality of people could be measured by the happiness of each country. Therefore, this report has utilized the happiness score of each country to analyse the changing of well-being according to countries, regions, and the world. The happiness scores will be allocated into a world map to explain the stark differences in happiness scores across the world. Subsequently, six key variables relating to socioeconomical factors are critically analysed to explain the sources of variations in happiness among countries.  
 
-The report has also analysed the importance of each modelling variables, as well as the relationships between happiness scores and other factors. During the study, this report has found the trends and distribution of happiness scores. Meanwhile, this report has explored the relative importance variables for modelling happiness scores and the correlation between happiness scores and five factors. ------what do you find(weihao's part)------. However, the number of countries observed was not consistent across the datasets, which might generate errors when calculating the average level and analyse the trends over the years. Also, these factors are standardised and have been transformed in unknown way,which will be difficult to construct the model for analysing the relationship between happiness scores and other five factors.
+The report has also analysed the importance of each modelling variables, as well as the relationships between happiness scores and other factors. In the study, this report has illustrated the trends over five years based on the top ten countries in 2015, and compared the distribution of the number of above average-happiness-level countries of each region in 2015 and 2019. Meanwhile, this report has explored the relative importance variables for modelling happiness scores and the correlation between happiness scores and five factors. Furthermore, the relationship between predictors and happiness score in linear regression analysis, that has been analysed and showed in the last section.
+
+However, the number of countries observed was not consistent across the datasets, which might generate errors when calculating the average level and analyse the trends and distribution over the years. Also, these factors are standardised and have been transformed in unknown way,which will be difficult to construct the model for analysing the relationship between happiness scores and other five factors.
+
+\clearpage
 
 # Data interpretation
 
@@ -77,7 +87,7 @@ We downloaded the data from Kaggle with the license of CCO:Public Domain, which 
 
 \clearpage
 
-# Q1.The evolution of world happiness
+# The evolution of world happiness
 
 ```{r read-data}
 happiness_2015 <- read_csv(here("data", "2015.csv"))
@@ -171,7 +181,7 @@ pie_2019 <- comparison_2019 %>%
 
 ## The trends in happiness 2015-2019
 
-In this part, the top ten countries in 2015 have been extracted to consider how their happiness changing during the five years. According to table \@ref(tab:top10-countries-2015), it has shown that Switzerland
+In this part, the top ten countries in 2015 have been extracted to consider how their happiness changing during the five years. According to table \@ref(tab:top10-countries-2015), it has shown that Switzerland has occupied first place in 2015, which was around 7.59 points. While Iceland was around 0.02 standing in second place. In addition, Australia was the tenth country, which was around 7.28. 
 
 ```{r top10-countries-2015}
 # Show the top10 countries in 2015 and plot a table
@@ -187,7 +197,8 @@ top10_2015 %>%
   kable_styling(bootstrap_options = c("bordered", "striped"))
 ```
 
-has occupied first place in 2015, which was around 7.59 points. While Iceland was around 0.02 standing in second place. In addition, Australia was the tenth country, which was around 7.28. Based on figure \@ref(fig:score-trends), which has shown that Finland was the country with a significant increase over
+
+Based on figure \@ref(fig:score-trends), which has shown that Finland was the country with a significant increase over five years. Finland has increased from just over 7.4 to around 7.77 and has become the happiest country in 2019. Meanwhile, Denmark, Norway, Netherlands, and New Zealand have also experienced an increase in both scores and places compared with 2015. Although the happiness score of Sweden has decreased in the same period, however, the rank of Sweden has improved in 2019. The rest of the four countries have experienced a decrease in both ranks and scores over five years. The reasons for the changing in score and ranks might because of the social welfare, country economic environment, and government policies. Such aspects have all related to each nation a within country so that impacts the satisfaction level. The importance of each factor that influence the happiness score would be discussed in the following part.
 
 ```{r join-data-frame}
 # Put all the happiness score data together 
@@ -207,19 +218,20 @@ total_data_plot %>%
   geom_point(aes(shape = Country))
 ```
 
-five years. Finland has increased from just over 7.4 to around 7.77 and has become the happiest country in 2019. Meanwhile, Denmark, Norway, Netherlands, and New Zealand have also experienced an increase in both scores and places compared with 2015. Although the happiness score of Sweden has decreased in the same period, however, the rank of Sweden has improved in 2019. The rest of the four countries have experienced a decrease in both ranks and scores over five years. The reasons for the changing in score and ranks might because of the social welfare, country economic environment, and government policies. Such aspects have all related to each nation a within country so that impacts the satisfaction level.
  
 ## The dynamics of the world and regional happiness 2015-2019
 
-Besides, this report has also considered the changing of regional happiness. Firstly, this report has explored the percentage of the number of countries which happiness scores above or below the world average level in 2015 and 2019 to consider the overall condition. According to figure \@ref(fig:combination-plots-2015-2019), the percentage of the above-average level has accounted for
+Besides, this report has also considered the changing of regional happiness. Firstly, this report has explored the percentage of the number of countries which happiness scores above or below the world average level in 2015 and 2019 to consider the overall condition. 
+
+According to figure \@ref(fig:combination-plots-2015-2019), the percentage of the above-average level has accounted for 46.84% in 2015, which was 74 countries. While there were still 84 countries that did not reach the average level. In 2019, the percentage of the above-average level has increased to 49.36%, which was 77 countries. And the percentage of the below-average level has decreased to 50.64%. In general, more and more people have satisfied their countries. 
 
 ```{r combination-plots-2015-2019, fig.cap="The percentage of the number of countries above or below average happiness scores in 2015 and 2019"}
 # Combine the above two pie charts
 plot_grid(pie_2015,pie_2019, ncol=2)
 ```
 
-46.84% in 2015, which was 74 countries. While there were still 84 countries that did not reach the average level. In 2019, the percentage of the above-average level has increased to 49.36%, which was 77 countries. And the percentage of the below-average level has decreased to 50.64%. In general, more and more people have satisfied their countries. 
-To study the deeper level, figure \@ref(fig:regions-comparison-2015) has explained the number of
+
+To study the deeper level, figure \@ref(fig:regions-comparison-2015) has explained the number of countries that above-average level of each region in 2015. According to that figure, Western Europe, and the region of Latin America and the Caribbean have the highest number, which was 19 countries respectively. While the region of Sub-Saharan Africa has only one country that above the average level in 2015. 
 
 ```{r regions-comparison-2015, fig.cap="The number of above average happiness scores across regions in 2015", fig.height=4, fig.width=11}
 # Show the number of countries that above the average score in 2015, group by each regions
@@ -235,7 +247,7 @@ comparison_2015 %>%
   
 ```
 
-countries that above-average level of each region in 2015. According to that figure, Western Europe, and the region of Latin America and the Caribbean have the highest number, which was 19 countries respectively. While the region of Sub-Saharan Africa has only one country that above the average level in 2015. Furthermore, based on figure \@ref(fig:regions-comparison-2019), western Europe has still stood
+Furthermore, based on figure \@ref(fig:regions-comparison-2019), western Europe has still stood at the dominant place, which was 19 countries. While Latin America and the Caribbean have lost a country, which totals 18 countries above average level in 2019. Central and Northern Europe have the same number as Latin America and the Caribbean in 2019. Meanwhile, Southern Asia has appeared in the figure in 2019, which was one country above the average level. In addition, North America, the region of Australia and New Zealand, and Sub-Saharan Africa have remained the same level compared with 2015.
 
 ```{r regions-comparison-2019, fig.cap="The number of above average happiness scores across regions in 2019", fig.height=4, fig.width=11}
 # Show the number of countries that above the average score in 2019, group by each regions
@@ -254,8 +266,10 @@ comparison_2019 %>%
   scale_y_continuous(breaks = seq(0,20, by = 1))
 ```
 
-at the dominant place, which was 19 countries. While Latin America and the Caribbean have lost a country, which totals 18 countries above average level in 2019. Central and Northern Europe have the same number as Latin America and the Caribbean in 2019. Meanwhile, Southern Asia has appeared in the figure in 2019, which was one country above the average level. In addition, North America, the region of Australia and New Zealand, and Sub-Saharan Africa have remained the same level compared with 2015. 
-In general, according to the figure of 2015 and 2019, the countries that happiness scores above average level have concentrated on the region of Europe, and Latin America and Caribbean. While the other regions have less number of countries compared with them.
+
+In conclusion, according to the figure of 2015 and 2019, the countries that happiness scores above average level have concentrated on the region of Europe, and Latin America and Caribbean. While the other regions have less number of countries compared with them.
+
+In the next section, the report would discuss the distribution of happiness score and attribute score across the world further.
 
 \clearpage
 
@@ -929,10 +943,10 @@ grid.arrange(p1, arrangeGrob(p2, p3, p4,p5, ncol=2), top = "Diagnostics for infl
 - package car [@car],
 - package here [@here],
 - package lubridate [@lubridate],
-- package cowplot [@cowplot]
-- package janitor [@janitor]
-- package maps [@maps]
-- package wbstats [@wbstats]
+- package cowplot [@cowplot],
+- package janitor [@janitor],
+- package maps [@maps],
+- package wbstats [@wbstats],
 - package plotly [@plotly]
 
 \clearpage
