--- a/Happiness.Rmd
+++ b/Happiness.Rmd
@@ -40,7 +40,7 @@ output:
     keep_tex: yes
     number_sections: yes
     citation_package: biblatex
-    toc: false
+    toc: true
 ---
 
 ```{r setup, include=FALSE}
@@ -70,24 +70,33 @@ select = dplyr::select
 
 \clearpage
 
-# Introduction
+# Introduction and research design
 
-@helliwell2019world has indicated that there is an inner connection between government and happiness, it means the jobs of government would influence the happiness of citizens, while the people feeling of happiness could guide them to decide which kind of government to support. In addition, @helliwell2019world has also explained that the living quality of people could be measured by the happiness of each country. Therefore, this report has utilized the happiness score of each country to analyse the changing of well-being according to countries, regions, and the world. The happiness scores will be allocated into a world map to explain the stark differences in happiness scores across the world. Subsequently, six key variables relating to socioeconomical factors are critically analysed to explain the sources of variations in happiness among countries.  
+@helliwell2019world has indicated that there is an inner connection between government and happiness, it means the jobs of government would influence the happiness of citizens, while the people feeling of happiness could guide them to decide which kind of government to support. In addition, @helliwell2019world has also explained that the living quality of people could be measured by the happiness of each country. 
 
-The report has also analysed the importance of each modelling variables, as well as the relationships between happiness scores and other factors. In the study, this report has illustrated the trends over five years based on the top ten countries in 2015, and compared the distribution of the number of above average-happiness-level countries of each region in 2015 and 2019. Meanwhile, this report has explored the relative importance variables for modelling happiness scores and the correlation between happiness scores and five factors. Furthermore, the relationship between predictors and happiness score in linear regression analysis, that has been analysed and showed in the last section.
+This report will utilized the happiness score of each country to analyse the changing of well-being according to countries, regions, and the world. The happiness scores will be allocated into a world map to explain the stark differences in happiness scores across the world. Subsequently, six key variables relating to socioeconomical factors are critically analysed to explain the sources of variations in happiness among countries.  
+
+The report will also analyse the importance of each modelling variables, as well as the relationships between happiness scores and other factors. In the study, this report will illustrate the trends over five years based on the top ten countries in 2015, and compared the distribution of the number of above average-happiness-level countries of each region in 2015 and 2019. Meanwhile, this report will explore the relative importance variables for modelling happiness scores and the correlation between happiness scores and five factors. Furthermore, the relationship between predictors and happiness score in linear regression analysis, that will be analysed and showed in the last section.
 
 However, the number of countries observed was not consistent across the datasets, which might generate errors when calculating the average level and analyse the trends and distribution over the years. Also, these factors are standardised and have been transformed in unknown way,which will be difficult to construct the model for analysing the relationship between happiness scores and other five factors.
 
 \clearpage
 
-# Data interpretation
+# Data
 
-We downloaded the data from Kaggle with the license of CCO:Public Domain, which contain the different factors and happiness scores between 2015-2019. In the five datasets, the variable for evaluating the happiness scores about GDP, health, freedom, generosity and government corruption are consistent but the family factor has been changed into social support after 2017. Also, the datasets are ranked from the highest one to the lowest one and the average of the observations are around 156 countries. The happiness scores are based on answered the main life evaluation in the Gallup World Poll. In this report, we are going to use these five datasets to analyse a series of questions for the happiness scores.
+## Data description
 
+We downloaded the data from Kaggle with the license of CCO:Public Domain, which contain the different factors and happiness scores between 2015-2019. In the five datasets, the variable for evaluating the happiness scores about GDP, health, freedom, generosity and government corruption are consistent but the family factor has been changed into social support after 2017. Also, the datasets are ranked from the highest one to the lowest one and the average of the observations are around 156 countries. The happiness scores are based on answered the main life evaluation in the Gallup World Poll. In this report, we are going to use these five datasets to analyse a series of questions for the happiness scores. In addition, other datasets from the World Bank will be used because of some issues with the happiness scores report. Details about those datasets will be dissucued in the modelling section.
+
+## Data pre-processing
+
+The happiness data downloaded from Kaggle is clean. No major data cleaning process needs to be made. Additional pre-processing steps will be discussed in each section if needed.
 
 \clearpage
 
-# The evolution of world happiness
+# Exploratory data analysis
+
+## The evolution of world happiness
 
 ```{r read-data}
 happiness_2015 <- read_csv(here("data", "2015.csv"))
@@ -179,7 +188,7 @@ pie_2019 <- comparison_2019 %>%
 
 @helliwell2019world has indicated that the world has become a rapidly changing place, and such the fastest changing might influence many aspects of different countries on their people. Therefore, in order to explore how satisfied people are with their countries over years, this report has used the happiness score to consider it.
 
-## The trends in happiness 2015-2019
+### The trends in happiness 2015-2019
 
 In this part, the top ten countries in 2015 have been extracted to consider how their happiness changing during the five years. According to table \@ref(tab:top10-countries-2015), it has shown that Switzerland has occupied first place in 2015, which was around 7.59 points. While Iceland was around 0.02 standing in second place. In addition, Australia was the tenth country, which was around 7.28. 
 
@@ -219,7 +228,7 @@ total_data_plot %>%
 ```
 
  
-## The dynamics of the world and regional happiness 2015-2019
+### The dynamics of the world and regional happiness 2015-2019
 
 Besides, this report has also considered the changing of regional happiness. Firstly, this report has explored the percentage of the number of countries which happiness scores above or below the world average level in 2015 and 2019 to consider the overall condition. 
 
@@ -273,7 +282,7 @@ In the next section, the report would discuss the distribution of happiness scor
 
 \clearpage
 
-# Happiness and Attribute Scores across the Globe
+## Happiness and Attribute Scores across the Globe
 
 ```{r read-in, cache = TRUE, include = FALSE}
 happ_2015 <- read.csv(here::here("Data/2015.csv")) # To extract region info
@@ -284,9 +293,7 @@ There is no formal definition of happiness, it is associated with an individual'
 
 In this section, six key criteria, which encompassess socioeconomic factors of countries are aggregated and quantified to explain the variation of happiness across countries. These criteria include GDP per capita, social support, healthy life expectancy, freedom, generosity, and absence of corruption. This section critically analyses these six variables to determine if happiness does change, according to the quality of the society people live across the world.
 
-\clearpage
-
-## Data, Design and Methodology
+### Incorporate the map data
 
 ```{r happ-2019-wrangle}
 happ_2019 <- happ_2019 %>%
@@ -335,15 +342,10 @@ To construct the happiness score on a map, the world map data is taken from the 
 
 The attribute scores of the six criteria are evaluated across the various countries and regions. The estimates of population data are employed [@wbstats] to determine if population size affects happiness scores. Similar to the world map, conflicting country names are modified so countries in both datasets match. Consequently, the attribute scores of all countries in the happiness data set are laid out on a scatter plot.
 
-\clearpage 
-
-## Limitations
-
 On top of the survey response bias, it should be noted that some limitations of this analysis include non-sampling errors such as defects in the selection of survey participants and population coverage limitations. Further, with a holistic approach in determining happiness scores of each country, minute details such as  in each city or state within countries cannot be computed. Lastly, the happiness data is aggregated, thus evaluations such as comparisons between different genders or age groups may not be established.
 
-\clearpage
 
-## Analysis 1: 2019 Happiness Scores on the World Map
+### 2019 Happiness Scores on the World Map
 
 ```{r world-map-data}
 require(maps)
@@ -419,17 +421,13 @@ Figure \@ref(fig:world-happiness-map) depicts the happiness scores of each count
 
 Comparatively, continents such as Europe, North America, and Australia have consistently high happiness scores in most countries. Moreover, the top 10 happiest countries are evidently dominated by Scandinavian countries such as Finland and Denmark, which was likewise underlined in the previous section (Figure \@ref(fig:score-trends)).
 
-\clearpage
-
-## Analysis 2: Compare attribute scores across countries
+### Comparison between attribute scores across countries
 
 ```{r happ-2019-longer}
 # Place all attribute scores on one variable for plotting
 happ_attr2019 <- happ_2019 %>%
   filter(year == 2019) %>%
-  pivot_longer(cols = gdp_per_capita:perceptions_of_corruption, 
-               names_to = "attr",
-               values_to = "attr_score") 
+  gather("attr","attr_score",gdp_per_capita:perceptions_of_corruption) 
 ```
 
 ```{r extract-pop-data}
@@ -534,7 +532,9 @@ The next section of this report will investigate these key criteria to see if ha
 
 \clearpage
 
-# Question 3 : Which variables are useful for modelling happiness scores and how the correlation between happiness scores and other factors?
+# Modelling
+
+## Which variables are useful for modelling happiness scores and how the correlation between happiness scores and other factors?
 
 ```{r loaddata}
 data2015 <- read.csv(here::here("Data/2015.csv"))
@@ -556,7 +556,7 @@ world_map <-ne_countries(returnclass = "sf")
 \end{align*}
   The **Table \@ref(tab:model2015)** is shown that there is strong evidence that the happiness score is and only is a simple average of these factors. In addition, all the R squared are close to 1 from 2015 to 2017 in the **Table \@ref(tab:Rsquared)** ,indicating that these factors are standardized and no longer to use as building up a model. Besides, for 2018 and 2019 data, the organization provides another set of variables such as social support has been changed from family factor, which are also highly correlated with the happiness score, but we have no method to understand what those values represent since they have been transformed in an unknown manner.
   
-  Instead of using the factors in the given dataset, we join other datasets to analysis the happiness score, including GDP, CPI, population and area by different countries. There are another three datasets such as GDP, CPI and population data which are downloaded from The World Bank. And area of each country is computed using the simple feature polygons with the package `rnaturalearth` [@rnaturalearth]. In addition, we pick up thee variables such as GDP,CPI and population between 2015-2019 to put them into new happiness score dataset. After matching the area of each country and drop out the missing value, the new dataset with happiness score for analyzing the relative variable importance is established in the **Table \@ref(tab:tableHS)**.
+  Instead of using the factors in the given dataset, we join other datasets to analysis the happiness score, including GDP, CPI, population and area by different countries. There are another three datasets such as GDP, CPI and population data which are downloaded from The World Bank [@world2020world]. And area of each country is computed using the simple feature polygons with the package `rnaturalearth` [@rnaturalearth]. In addition, we pick up thee variables such as GDP,CPI and population between 2015-2019 to put them into new happiness score dataset. After matching the area of each country and drop out the missing value, the new dataset with happiness score for analyzing the relative variable importance is established in the **Table \@ref(tab:tableHS)**.
   
   
 ```{r lmmodel}
@@ -664,10 +664,8 @@ head(happy_score)%>%kable(caption = 'A clean dataset with Happiness Score')%>%
   kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE)
 ```
 
-\clearpage
 
-
-## Variable importance
+### Variable importance
 
   For comparing the relative importance with each predictors, the **lmg** approach with package `relaipmo` [@relaimpo] is used for evaluating the variable importance in modelling happiness score. By using **lmg** approach to  calculate the relative contribution of each predictor to the R squared with the consideration of the sequence of predictors appearing in the model. 
   
@@ -678,7 +676,7 @@ head(happy_score)%>%kable(caption = 'A clean dataset with Happiness Score')%>%
 
   From **Figure \@ref(fig:variable-important)**,we can see that the total proportion of variance explained by the model with all four predictors is around 72.88%. For the four predictors, GDP with the highest value in four predictors contributed to around 65% for the happiness scores,indicating that GDP factor is the most important for happiness score and it is more likely to affect the change of happiness scores when the GDP variable change [@gromping2015variable]. On the other hand,by using **variance inflation factor** (VIF) measure to evaluate the impact of the correlation among the explanatory variables. In the **Table \@ref(tab:mulitilinearity)**, the VIF value in each predictor is not too high but for the population variable is the highest one around at 3, indicating that there is a slight correlation of population with other variables in the model [@daoud2017multicollinearity].
 
-## Scatter matrix
+### Scatter matrix
   To analyze the relationship between different predictors, we use scatter matrix which can be visualized easily how much one variable is affected by another or the relationship between them. The **Figure \@ref(fig:scattermatrix)** compares all the predictors in the model and represents the relationship between these variables. If there is a strong positive linear correlation between two factors, we can say that if one factor is important in evaluating the happiness scores, it is likely that the other factor has contribute to it as well. Based on the figures, it seems that the importance of GDP and area are strongly correlated, as well as population and area. Therefore,GDP is the most important factors for evaluating the happiness scores as it has the highest positive correlation with happiness score,but also for the developed countries in most of western area with highest GDP, the happiness scores will be higher than the development countries with lower GDP.
   
   In conclusion, GDP is the most influential factors for assessing the happiness scores but the area variable represents a higher correlation with GDP. Thus, Even in very poor countries, GDP comparisons seem to influence the happiness score mostly; however, it may look more likely to happen in rich-country phenomenon [@clark2011will].
@@ -705,11 +703,9 @@ model <- lm(log(`Happiness Score`)~log(area)+cpi+log(gdp)+log(population), data=
 ```{r mulitilinearity,fig.cap="VIF procedures in each predictors"}
 as.table(car::vif(model))%>%
   kable(caption = 'VIF procedures for checking multicollinearity with each predictors') %>%
-  kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE, position = "left")
+  kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE)
   
 ```
-
-\clearpage
 
 ```{r scattermatrix,fig.cap="Happiness Score Scatter Matrix", fig.width = 10, fig.height = 10}
 ggpairs(data=happy_score[,-c(2,3)],
@@ -718,7 +714,7 @@ ggpairs(data=happy_score[,-c(2,3)],
 
 \clearpage
 
-# Q4. What is the relationship between predictors and happiness score in linear regression analysis?
+## What is the relationship between predictors and happiness score in linear regression analysis?
 
 ```{r message=FALSE}
 h15 = read_csv("Data/2015.csv")
@@ -824,7 +820,7 @@ lm_sum$coefficients %>%
   kableExtra::kable_styling(latex_options = "striped")
 ```
 
-We use variables mentioned in Q3 as predictors, the regression result is shown in **Table** \ref{tab:lmcoeff}. According to the result, we can write down the formula for this model:
+We use variables mentioned in the previous section as predictors, the regression result is shown in **Table** \ref{tab:lmcoeff}. According to the result, we can write down the formula for this model:
 
 \begin{align*}
 \text{log(Happiness Score)} = & \ 0.3208 + 0.0005\text{ CPI} + 0.1285 \text{ log(GDP)} \\
@@ -930,6 +926,9 @@ grid.arrange(p1, arrangeGrob(p2, p3, p4,p5, ncol=2), top = "Diagnostics for infl
 \clearpage
 
 # Acknowledgement
+
+The programming language used to analyse the happiness data is R [@R]. Following packages has been included in our scripts:
+
 - package ggplot2 [@ggplot2],
 - package tidyverse [@tidyverse],
 - package dplyr [@dplyr],
