--- a/references.bib
+++ b/references.bib
@@ -216,3 +216,19 @@
     isbn = {9781138331457},
     url = {https://plotly-r.com}
   }
+
+@book{world2020world,
+  title={World bank data},
+  author={{World Bank}},
+  year={2020},
+  publisher={World Bank.}
+}
+
+@Manual{R,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2019},
+    url = {https://www.R-project.org/}
+  }
